--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
             <section class="resume-section" id="projects">
                <div class="container-fluid">
                 <div class="row">
+                  <h2 class="text-center mb-5">Worked on Project</h2>
                   <div class="bg-dark text-white text-center w-100 h-50 rounded" >
-                            <h2>Worked on Project</h2>
+                    <h2>Amazon Prime</h2>
                             <p class="text-fluid">
                               During my time at Brototype, I had the opportunity to work on a static clone 
                               website project of Amzone Prime. If you're interested in exploring the project and 
@@ -84,12 +85,24 @@
 
                 <div class="row mt-4">
                   <div class="bg-dark text-white text-center w-100 h-50 rounded" >
-                            <h2>Worked on Project</h2>
+                            <h2>7 UP </h2>
                             <p class="text-fluid">
                               During my time at Brototype, I had the opportunity to work on an engaging static clone website project of 7Up. If you're curious about our work and would like to see the project in action, please click the button below for a detailed exploration of our achievements.
                             </p>
 
                             <a href="https://binshad7.github.io/7-UP-Clone/" class="link-to-project"  target="_blank">Live Demo</a>
+                  </div>
+                </div>
+
+
+                <div class="row mt-4">
+                  <div class="bg-dark text-white text-center w-100 h-50 rounded" >
+                            <h2>Appy Fizz</h2>
+                            <p class="text-fluid">
+                              During my time at Brototype, I had the opportunity to work on an engaging static clone website project of  Appy Fizz. If you're curious about our work and would like to see the project in action, please click the button below for a detailed exploration of our achievements.
+                            </p>
+
+                            <a href="https://binshad7.github.io/Fizz_clone/" class="link-to-project"  target="_blank">Live Demo</a>
                   </div>
                 </div>
 
